@@ -19,310 +19,543 @@ package io.helidon.builder.codegen;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.function.Consumer;
 
+import io.helidon.builder.codegen.spi.BuilderCodegenExtension;
+import io.helidon.codegen.classmodel.ClassBase;
 import io.helidon.codegen.classmodel.ContentBuilder;
 import io.helidon.codegen.classmodel.Field;
-import io.helidon.codegen.classmodel.InnerClass;
 import io.helidon.codegen.classmodel.Javadoc;
 import io.helidon.codegen.classmodel.Method;
 import io.helidon.codegen.classmodel.TypeArgument;
+import io.helidon.common.types.ElementKind;
 import io.helidon.common.types.TypeName;
 import io.helidon.common.types.TypeNames;
 import io.helidon.common.types.TypedElementInfo;
 
+import static io.helidon.builder.codegen.Types.ARRAY_LIST;
+import static io.helidon.builder.codegen.Types.LINKED_HASH_MAP;
+import static io.helidon.builder.codegen.Types.LINKED_HASH_SET;
 import static io.helidon.codegen.CodegenUtil.capitalize;
 import static io.helidon.common.types.TypeNames.LIST;
 import static io.helidon.common.types.TypeNames.MAP;
 import static io.helidon.common.types.TypeNames.OBJECT;
 import static io.helidon.common.types.TypeNames.SET;
 
-class TypeHandlerMap extends TypeHandler {
+class TypeHandlerMap extends TypeHandlerContainer {
     private static final TypeName SAME_GENERIC_TYPE = TypeName.createFromGenericDeclaration("TYPE");
-    private final TypeName actualType;
-    private final TypeName implTypeName;
+
     private final boolean sameGeneric;
+    private final TypeName keyType;
+    private final TypeName valueType;
 
-    TypeHandlerMap(TypeName blueprintType,
-                   TypedElementInfo annotatedMethod,
-                   String name, String getterName, String setterName, TypeName declaredType, boolean sameGeneric) {
-        super(blueprintType, annotatedMethod, name, getterName, setterName, declaredType);
-        this.sameGeneric = sameGeneric;
+    TypeHandlerMap(List<BuilderCodegenExtension> extensions, PrototypeInfo prototypeInfo, OptionInfo option) {
+        super(extensions, prototypeInfo, option, option.declaredType().typeArguments().get(1));
 
-        this.implTypeName = collectionImplType(MAP);
-        if (declaredType.typeArguments().size() < 2) {
-            this.actualType = TypeNames.STRING;
-        } else {
-            this.actualType = declaredType.typeArguments().get(1);
-        }
+        this.sameGeneric = option.sameGeneric();
+        this.keyType = option.declaredType().typeArguments().get(0);
+        this.valueType = option.declaredType().typeArguments().get(1);
     }
 
     @Override
-    Field.Builder fieldDeclaration(AnnotationDataOption configured, boolean isBuilder, boolean alwaysFinal) {
-        Field.Builder builder = super.fieldDeclaration(configured, isBuilder, true);
-        if (isBuilder && !configured.hasDefault()) {
-            builder.addContent("new ")
-                    .addContent(implTypeName.genericTypeName())
-                    .addContent("<>()");
-        }
-        return builder;
-    }
+    public void generateFromConfig(Method.Builder method, OptionConfigured optionConfigured) {
+        String optionName = option().name();
 
-    @Override
-    Consumer<ContentBuilder<?>> toDefaultValue(List<String> defaultValues,
-                                               List<Integer> defaultInts,
-                                               List<Long> defaultLongs,
-                                               List<Double> defaultDoubles,
-                                               List<Boolean> defaultBooleans) {
-
-        if (defaultValues != null) {
-            if (defaultValues.size() % 2 != 0) {
-                throw new IllegalArgumentException("Default value for a map does not have even number of entries:"
-                                                           + defaultValues);
-            }
-
-            return content -> {
-                content.addContent(Map.class)
-                        .addContent(".of(");
-
-                for (int i = 1; i < defaultValues.size(); i = i + 2) {
-                    content.addContent("\"")
-                            .addContent(defaultValues.get(i - 1))
-                            .addContent("\", ");
-                    super.toDefaultValue(defaultValues.get(i)).accept(content);
-                    if (i < defaultValues.size() - 2) {
-                        content.addContentLine(", ");
-                    }
-                    if (i == 1) {
-                        content.increaseContentPadding()
-                                .increaseContentPadding();
-                    }
-                }
-
-                content.addContent(")")
-                        .decreaseContentPadding()
-                        .decreaseContentPadding();
-            };
-        }
-
-        return null;
-    }
-
-    @Override
-    TypeName actualType() {
-        return actualType;
-    }
-
-    @Override
-    void generateFromConfig(Method.Builder method,
-                            AnnotationDataOption configured,
-                            FactoryMethods factoryMethods) {
-        List<TypeName> typeArguments = declaredType().typeArguments();
-        TypeName keyTypeName = typeArguments.get(0);
-        TypeName valueTypeName = typeArguments.get(1);
-        if (TypeNames.STRING.equals(keyTypeName) && TypeNames.STRING.equals(valueTypeName)) {
+        if (TypeNames.STRING.equals(keyType) && TypeNames.STRING.equals(valueType)) {
             // the special case of Map<String, String>
-            method.addContentLine(configGet(configured) + ".detach().asMap().ifPresent(this::" + name() + ");");
-        } else if (configured.traverseConfig()){
-            method.addContent(configGet(configured) + ".detach().traverse().filter(")
+            method.addContentLine(configGet(optionConfigured) + ".detach().asMap().ifPresent(this::" + optionName + ");");
+        } else if (optionConfigured.traverse()) {
+            method.addContent(configGet(optionConfigured) + ".detach().traverse().filter(")
                     .addContent(Types.COMMON_CONFIG)
                     .addContent("::hasValue).forEach(node -> "
-                                        + name() + ".put(node.get(\"name\").asString().orElse(node.key().toString()), node");
-            generateFromConfig(method, factoryMethods);
+                                        + optionName + ".put(node.get(\"name\").asString().orElse(node.key().toString()), node");
+            generateFromConfig(method);
             method.addContentLine(".get()));");
         } else {
-            method.addContent(configGet(configured)
+            method.addContent(configGet(optionConfigured)
                                       + ".asNodeList().ifPresent(nodes -> nodes.forEach"
                                       + "(node -> "
-                                      + name() + ".put(node.get(\"name\").asString().orElse(node.name()), node");
-            generateFromConfig(method, factoryMethods);
+                                      + optionName + ".put(node.get(\"name\").asString().orElse(node.name()), node");
+            if (optionConfigured.factoryMethod().isPresent()) {
+                generateFromConfig(method, optionConfigured.factoryMethod().get());
+            } else {
+                generateFromConfig(method);
+            }
             method.addContentLine(".get())));");
         }
     }
 
     @Override
-    TypeName argumentTypeName() {
-        TypeName firstType = declaredType().typeArguments().get(0);
-        if (!(TypeNames.STRING.equals(firstType) || toPrimitive(firstType).primitive() || firstType.array())) {
-            firstType = toWildcard(firstType);
-        }
-        TypeName secondType = declaredType().typeArguments().get(1);
-        if (!(TypeNames.STRING.equals(secondType) || toPrimitive(secondType).primitive() || secondType.array())) {
-            secondType = toWildcard(secondType);
-        }
+    GeneratedMethod prepareBuilderSetter(Javadoc getterJavadoc) {
+        TypeName returnType = Utils.builderReturnType();
 
-        return TypeName.builder(MAP)
-                .addTypeArgument(firstType)
-                .addTypeArgument(secondType)
+        String name = option().name();
+
+        Javadoc javadoc = Javadoc.builder(setterJavadoc(getterJavadoc, name, ""))
+                .add("\nThis method replaces all values with the new ones.")
+                .build();
+
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName(option().setterName())
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        method.addParameterArgument(param -> param
+                .kind(ElementKind.PARAMETER)
+                .typeName(typeOfMap(keyType, valueType))
+                .elementName(name)
+        );
+
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
+                    .addContentLine(".requireNonNull(" + name + ");");
+
+            it.addContentLine("this." + name + ".clear();")
+                    .addContentLine("this." + name + ".putAll(" + name + ");");
+            extraSetterContent(it);
+            it.addContentLine("return self();");
+        };
+
+        return GeneratedMethod.builder()
+                .method(method.build())
+                .javadoc(javadoc)
+                .contentBuilder(contentConsumer)
                 .build();
     }
 
-    @SuppressWarnings("checkstyle:MethodLength") // will be shorter when we switch to class model
     @Override
-    void setters(InnerClass.Builder classBuilder,
-                 AnnotationDataOption configured,
-                 FactoryMethods factoryMethod,
-                 TypeName returnType,
-                 Javadoc blueprintJavadoc) {
+    Optional<GeneratedMethod> prepareBuilderAddCollection(Javadoc getterJavadoc) {
+        TypeName returnType = Utils.builderReturnType();
+        String name = option().name();
 
-        declaredSetter(classBuilder, configured, returnType, blueprintJavadoc);
-        declaredSetterAdd(classBuilder, configured, returnType, blueprintJavadoc);
+        Javadoc javadoc = Javadoc.builder(setterJavadoc(getterJavadoc, name, ""))
+                .add("\nThis method keeps existing values, then puts all new values into the map.")
+                .build();
 
-        if (factoryMethod.createTargetType().isPresent()) {
-            // factory method
-            FactoryMethods.FactoryMethod fm = factoryMethod.createTargetType().get();
-            String name = name();
-            String argumentName = name + "Config";
-            classBuilder.addMethod(builder -> {
-                builder.name(name + "Config")
-                        .description(blueprintJavadoc.content())
-                        .accessModifier(setterAccessModifier(configured))
-                        .addDescriptionLine("This method keeps existing values, then puts all new values into the map.")
-                        .addParameter(param -> param.name(argumentName)
-                                .type(fm.argumentType())
-                                .description(blueprintJavadoc.returnDescription()))
-                        .addJavadocTag("see", "#" + getterName() + "()")
-                        .returnType(returnType, "updated builder instance")
-                        .addContent(Objects.class)
-                        .addContentLine(".requireNonNull(" + argumentName + ");")
-                        .addContentLine("this." + name + ".clear();")
-                        .addContent("this." + name + ".putAll(")
-                        .addContent(fm.typeWithFactoryMethod().genericTypeName())
-                        .addContentLine("." + fm.createMethodName() + "(" + argumentName + "));")
-                        .addContentLine("return self();");
-            });
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName("add" + capitalize(name))
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        method.addParameterArgument(param -> param
+                .kind(ElementKind.PARAMETER)
+                .typeName(typeOfMap(keyType, valueType))
+                .elementName(name)
+        );
+
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
+                    .addContentLine(".requireNonNull(" + name + ");")
+                    .addContentLine("this." + name + ".putAll(" + name + ");");
+            extraSetterContent(it);
+            it.addContentLine("return self();");
+        };
+
+        return Optional.ofNullable(GeneratedMethod.builder()
+                                           .method(method.build())
+                                           .javadoc(javadoc)
+                                           .contentBuilder(contentConsumer)
+                                           .build());
+    }
+
+    @Override
+    Optional<GeneratedMethod> prepareBuilderSingularAdd(Javadoc getterJavadoc) {
+        if (option().singular().isEmpty()) {
+            return Optional.empty();
+        }
+        OptionSingular singular = option().singular().get();
+        String singularName = singular.name();
+        String methodName = singular.methodName();
+        TypeName returnType = Utils.builderReturnType();
+        String name = option().name();
+
+        Javadoc setterJavadoc = Javadoc.builder(setterJavadoc(getterJavadoc, "key", ""))
+                .add("\nThis method adds a new value to the map, or replaces it if the key already exists.")
+                .parameters(Map.of())
+                .addParameter("key", "key to add or replace")
+                .addParameter(singularName, "new value for the key")
+                .update(it -> {
+                    if (sameGeneric) {
+                        it.addGenericArgument("TYPE", "The key and value has to use the same generic type.");
+                    }
+                })
+                .build();
+
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName(methodName)
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        if (sameGeneric) {
+            sameGenericArgs(method, keyType, singularName, type());
+        } else {
+            method.addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(keyType)
+                            .elementName("key"))
+                    .addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(type())
+                            .elementName(singularName)
+                    );
         }
 
-        TypeName keyType = declaredType().typeArguments().get(0);
-
-        if (configured.singular() && isCollection(actualType())) {
-            // value is a collection as well, we need to generate `add` methods for adding a single value, and adding
-            // collection values
-            // builder.addValue(String key, String value)
-            // builder.addValues(String key, Set<String> values)
-            String singularName = configured.singularName();
-            setterAddValueToCollection(classBuilder,
-                                       configured,
-                                       singularName,
-                                       keyType,
-                                       actualType().typeArguments().get(0),
-                                       returnType,
-                                       blueprintJavadoc);
-
-            setterAddValuesToCollection(classBuilder,
-                                        configured,
-                                        "add" + capitalize(name()),
-                                        keyType,
-                                        returnType,
-                                        blueprintJavadoc);
-        }
-        if (configured.singular()) {
-            // Builder putValue(String key, String value)
-            String singularName = configured.singularName();
-            String methodName;
-            if (configured.singularAddPrefix()) {
-                methodName = "put" + capitalize(singularName);
-            } else {
-                methodName = singularName;
-            }
-
-            Method.Builder method = Method.builder()
-                    .name(methodName)
-                    .accessModifier(setterAccessModifier(configured))
-                    .returnType(returnType, "updated builder instance")
-                    .description(blueprintJavadoc.content())
-                    .addDescriptionLine("This method adds a new value to the map, or replaces it if the key already exists.")
-                    .addJavadocTag("see", "#" + getterName() + "()");
-            if (sameGeneric) {
-                sameGenericArgs(method, keyType, singularName, actualType());
-            } else {
-                method.addParameter(param -> param.name("key")
-                                .type(keyType)
-                                .description("key to add or replace"))
-                        .addParameter(param -> param.name(singularName)
-                                .type(actualType())
-                                .description("new value for the key"));
-            }
-            method.addContent(Objects.class)
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
                     .addContentLine(".requireNonNull(key);")
                     .addContent(Objects.class)
                     .addContentLine(".requireNonNull(" + singularName + ");")
-                    .addContent("this." + name() + ".put(key, ");
-            secondArgToPut(method, actualType(), singularName);
-            method.addContentLine(");")
-                    .addContentLine("return self();");
+                    .addContent("this." + name + ".put(key, ");
+            secondArgToPut(it, type(), singularName);
+            it.addContentLine(");");
+            extraAdderContent(it);
+            it.addContentLine("return self();");
+        };
 
-            classBuilder.addMethod(method);
-
-            if (factoryMethod.builder().isPresent()) {
-                FactoryMethods.FactoryMethod fm = factoryMethod.builder().get();
-                TypeName builderType;
-                if (fm.factoryMethodReturnType().className().equals("Builder")) {
-                    builderType = fm.factoryMethodReturnType();
-                } else {
-                    builderType = TypeName.create(fm.factoryMethodReturnType().fqName() + ".Builder");
-                }
-                if (!skipBuilderConsumer(builderType)) {
-                    classBuilder.addMethod(builder -> builder.name(methodName)
-                            .accessModifier(setterAccessModifier(configured))
-                            .returnType(returnType, "updated builder instance")
-                            .description(blueprintJavadoc.content())
-                            .addDescriptionLine(
-                                    "This method adds a new value to the map, or replaces it if the key already exists.")
-                            .addJavadocTag("see", "#" + getterName() + "()")
-                            .addParameter(param -> param.name("key")
-                                    .type(keyType)
-                                    .description("key to add or replace"))
-                            .addParameter(param -> param.name("consumer")
-                                    .type(TypeName.builder()
-                                                  .type(Consumer.class)
-                                                  .addTypeArgument(builderType)
-                                                  .build())
-                                    .description("builder consumer to create new value for the key"))
-                            .addContent(Objects.class)
-                            .addContentLine(".requireNonNull(key);")
-                            .addContent(Objects.class)
-                            .addContentLine(".requireNonNull(consumer);")
-                            .addContent("var builder = ")
-                            .addContent(fm.typeWithFactoryMethod().genericTypeName())
-                            .addContentLine("." + fm.createMethodName() + "();")
-                            .addContentLine("consumer.accept(builder);")
-                            .addContentLine("this." + methodName + "(key, builder.build());")
-                            .addContentLine("return self();"));
-                }
-            }
-        }
+        return Optional.ofNullable(GeneratedMethod.builder()
+                                           .method(method.build())
+                                           .contentBuilder(contentConsumer)
+                                           .javadoc(setterJavadoc)
+                                           .build());
     }
 
     @Override
-    protected void declaredSetter(InnerClass.Builder classBuilder,
-                                  AnnotationDataOption configured,
-                                  TypeName returnType,
-                                  Javadoc blueprintJavadoc) {
-        // declared type (such as Map<String, String>) - replace content
-        classBuilder.addMethod(builder -> builder.name(setterName())
-                .returnType(returnType, "updated builder instance")
-                .description(blueprintJavadoc.content())
-                .addDescriptionLine("This method replaces all values with the new ones.")
-                .addJavadocTag("see", "#" + getterName() + "()")
-                .addParameter(param -> param.name(name())
-                        .type(argumentTypeName())
-                        .description(blueprintJavadoc.returnDescription()))
-                .accessModifier(setterAccessModifier(configured))
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(" + name() + ");")
-                .addContentLine("this." + name() + ".clear();")
-                .addContentLine("this." + name() + ".putAll(" + name() + ");")
-                .addContentLine("return self();"));
+    Optional<GeneratedMethod> prepareBuilderSingularAddToMapValue(Javadoc getterJavadoc) {
+        if (option().singular().isEmpty()) {
+            return Optional.empty();
+        }
+        if (!(valueType.isSet() || valueType.isList())) {
+            return Optional.empty();
+        }
+        OptionSingular singular = option().singular().get();
+        String singularName = singular.name();
+        String methodName = "add" + capitalize(singularName);
+        TypeName returnType = Utils.builderReturnType();
+        TypeName valueParamType = type().typeArguments().getFirst();
+
+        Javadoc setterJavadoc = Javadoc.builder(setterJavadoc(getterJavadoc, "key", ""))
+                .add("\nThis method adds a new value to the map value, or creates a new value.")
+                .parameters(Map.of())
+                .addParameter("key", "key to add value for")
+                .addParameter(singularName, "value to add to the map values")
+                .build();
+
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName(methodName)
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        if (sameGeneric) {
+            sameGenericArgs(method, keyType, singularName, valueParamType);
+        } else {
+            method.addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(keyType)
+                            .elementName("key"))
+                    .addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(valueParamType)
+                            .elementName(singularName)
+                    );
+        }
+
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
+                    .addContentLine(".requireNonNull(key);")
+                    .addContent(Objects.class)
+                    .addContentLine(".requireNonNull(" + singularName + ");")
+                    .addContentLine("this." + option().name() + ".compute(key, (k, v) -> {")
+                    .addContent("v = v == null ? new ")
+                    .addContent(containerValueTypeImpl())
+                    .addContent("<>() : new ")
+                    .addContent(containerValueTypeImpl())
+                    .addContentLine("<>(v);")
+                    .addContentLine("v.add(" + singularName + ");")
+                    .addContentLine("return v;")
+                    .decreaseContentPadding()
+                    .addContentLine("});");
+
+            extraAdderContent(it);
+            it.addContentLine("return self();");
+        };
+
+        return Optional.ofNullable(GeneratedMethod.builder()
+                                           .method(method.build())
+                                           .contentBuilder(contentConsumer)
+                                           .javadoc(setterJavadoc)
+                                           .build());
     }
 
-    private void sameGenericArgs(Method.Builder method,
+    @Override
+    Optional<GeneratedMethod> prepareBuilderSingularAddToMapValues(Javadoc getterJavadoc) {
+        if (option().singular().isEmpty()) {
+            return Optional.empty();
+        }
+        if (!(valueType.isSet() || valueType.isList())) {
+            return Optional.empty();
+        }
+        String methodName = "add" + capitalize(option().name());
+        TypeName returnType = Utils.builderReturnType();
+        String name = option().name();
+
+        Javadoc setterJavadoc = Javadoc.builder(setterJavadoc(getterJavadoc, "key", ""))
+                .add("\nThis method adds new values to the map values, or creates a new mapping.")
+                .parameters(Map.of())
+                .addParameter("key", "key to add value for")
+                .addParameter(name, "values to add to the map values")
+                .build();
+
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName(methodName)
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        if (sameGeneric) {
+            sameGenericArgs(method, keyType, name, type());
+        } else {
+            method.addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(keyType)
+                            .elementName("key"))
+                    .addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(type())
+                            .elementName(name)
+                    );
+        }
+
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
+                    .addContentLine(".requireNonNull(key);")
+                    .addContent(Objects.class)
+                    .addContentLine(".requireNonNull(" + name + ");")
+                    .addContentLine("this." + option().name() + ".compute(key, (k, v) -> {")
+                    .addContent("v = v == null ? new ")
+                    .addContent(containerValueTypeImpl())
+                    .addContent("<>() : new ")
+                    .addContent(containerValueTypeImpl())
+                    .addContentLine("<>(v);")
+                    .addContentLine("v.addAll(" + name + ");")
+                    .addContentLine("return v;")
+                    .decreaseContentPadding()
+                    .addContentLine("});");
+
+            extraAdderContent(it);
+            it.addContentLine("return self();");
+        };
+
+        return Optional.ofNullable(GeneratedMethod.builder()
+                                           .method(method.build())
+                                           .contentBuilder(contentConsumer)
+                                           .javadoc(setterJavadoc)
+                                           .build());
+    }
+
+    @Override
+    Optional<GeneratedMethod> prepareBuilderSingularAddConsumer(Javadoc getterJavadoc) {
+        if (option().singular().isEmpty()
+                || (option().builderInfo().isEmpty() && option().runtimeType().isEmpty())) {
+            return Optional.empty();
+        }
+
+        OptionSingular singular = option().singular().get();
+        String methodName = singular.methodName();
+        TypeName returnType = Utils.builderReturnType();
+
+        /*
+        builder.putOption("key", builder -> builder.port(49))
+         */
+        if (option().runtimeType().isPresent()) {
+            RuntimeTypeInfo rti = option().runtimeType().get();
+            var optionBuilder = rti.optionBuilder();
+            var factoryMethod = rti.factoryMethod();
+
+            Javadoc setterJavadoc = Javadoc.builder(setterJavadoc(getterJavadoc, "key", ""))
+                    .add("\nThis method adds a new value to the map, or replaces it if the key already exists.")
+                    .parameters(Map.of())
+                    .addParameter("key", "key to add or replace")
+                    .addParameter("consumer", "consumer of builder for new value")
+                    .build();
+
+            TypeName paramType = TypeName.builder()
+                    .type(Consumer.class)
+                    .addTypeArgument(optionBuilder.builderType())
+                    .build();
+
+            var method = TypedElementInfo.builder()
+                    .kind(ElementKind.METHOD)
+                    .accessModifier(option().accessModifier())
+                    .typeName(returnType)
+                    .elementName(methodName)
+                    .update(this::deprecation)
+                    .update(it -> option().annotations().forEach(it::addAnnotation));
+
+            method.addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(keyType)
+                            .elementName("key"))
+                    .addParameterArgument(param -> param
+                            .kind(ElementKind.PARAMETER)
+                            .typeName(paramType)
+                            .elementName("consumer")
+                    );
+
+            Consumer<ContentBuilder<?>> contentConsumer = it -> {
+                it.addContent(Objects.class)
+                        .addContentLine(".requireNonNull(consumer);")
+                        .addContent("var builder = ");
+
+                if (optionBuilder.builderMethodName().equals("<init>")) {
+                    it.addContent("new ")
+                            .addContent(optionBuilder.builderType())
+                            .addContentLine("();");
+                } else {
+                    it.addContent(optionBuilder.builderMethodType())
+                            .addContentLine("." + optionBuilder.builderMethodName() + "();");
+                }
+
+                it.addContentLine("consumer.accept(builder);")
+                        .addContent("this." + methodName + "(key, ");
+
+                factoryMethod.ifPresent(fm -> it.addContent(fm.declaringType().genericTypeName())
+                        .addContent(".")
+                        .addContent(fm.methodName())
+                        .addContent("("));
+
+                it.addContent("builder.")
+                        .addContent(optionBuilder.buildMethodName())
+                        .addContent("()");
+
+                factoryMethod.ifPresent(f -> it.addContent(")"));
+
+                it.addContentLine(");");
+                it.addContentLine("return self();");
+            };
+
+            return Optional.of(GeneratedMethod.builder()
+                                       .method(method.build())
+                                       .javadoc(setterJavadoc)
+                                       .contentBuilder(contentConsumer)
+                                       .build());
+        }
+        var optionBuilder = option().builderInfo().get();
+
+        Javadoc setterJavadoc = Javadoc.builder(setterJavadoc(getterJavadoc, "key", ""))
+                .add("\nThis method adds a new value to the map, or replaces it if the key already exists.")
+                .parameters(Map.of())
+                .addParameter("key", "key to add or replace")
+                .addParameter("consumer", "consumer of builder for new value")
+                .build();
+
+        TypeName paramType = TypeName.builder()
+                .type(Consumer.class)
+                .addTypeArgument(optionBuilder.builderType())
+                .build();
+
+        var method = TypedElementInfo.builder()
+                .kind(ElementKind.METHOD)
+                .accessModifier(option().accessModifier())
+                .typeName(returnType)
+                .elementName(methodName)
+                .update(this::deprecation)
+                .update(it -> option().annotations().forEach(it::addAnnotation));
+
+        method.addParameterArgument(param -> param
+                        .kind(ElementKind.PARAMETER)
+                        .typeName(keyType)
+                        .elementName("key"))
+                .addParameterArgument(param -> param
+                        .kind(ElementKind.PARAMETER)
+                        .typeName(paramType)
+                        .elementName("consumer")
+                );
+
+        Consumer<ContentBuilder<?>> contentConsumer = it -> {
+            it.addContent(Objects.class)
+                    .addContentLine(".requireNonNull(consumer);")
+                    .addContent("var builder = ");
+
+            if (optionBuilder.builderMethodName().equals("<init>")) {
+                it.addContent("new ")
+                        .addContent(optionBuilder.builderType())
+                        .addContentLine("();");
+            } else {
+                it.addContent(optionBuilder.builderMethodType())
+                        .addContentLine("." + optionBuilder.builderMethodName() + "();");
+            }
+
+            it.addContentLine("consumer.accept(builder);")
+                    .addContent("this." + methodName + "(key, ");
+
+            it.addContent("builder.")
+                    .addContent(optionBuilder.buildMethodName())
+                    .addContent("()");
+
+            it.addContentLine(");");
+            it.addContentLine("return self();");
+        };
+
+        return Optional.of(GeneratedMethod.builder()
+                                   .method(method.build())
+                                   .javadoc(setterJavadoc)
+                                   .contentBuilder(contentConsumer)
+                                   .build());
+    }
+
+    @Override
+    void addFields(ClassBase.Builder<?, ?> classBuilder, boolean isBuilder) {
+        Field.Builder builder = super.field(isBuilder);
+        if (isBuilder && option().defaultValue().isEmpty()) {
+            builder.addContent("new ")
+                    .addContent(LINKED_HASH_MAP)
+                    .addContent("<>()");
+        }
+
+        classBuilder.addField(builder.build());
+    }
+
+    private TypeName containerValueTypeImpl() {
+        if (valueType.isList()) {
+            return ARRAY_LIST;
+        }
+        if (valueType.isSet()) {
+            return LINKED_HASH_SET;
+        }
+        if (valueType.isMap()) {
+            return LINKED_HASH_MAP;
+        }
+        return valueType;
+    }
+
+    private TypeName typeOfMap(TypeName keyType, TypeName valueType) {
+        return TypeName.builder(MAP)
+                .addTypeArgument(Utils.toWildcard(keyType))
+                .addTypeArgument(Utils.toWildcard(valueType))
+                .build();
+    }
+
+    private void sameGenericArgs(TypedElementInfo.Builder method,
                                  TypeName keyType,
                                  String value,
                                  TypeName valueType) {
 
-        String typeDeclaration;
         TypeName genericTypeBase;
         TypeName resolvedKeyType;
         TypeName resolvedValueType;
@@ -341,7 +574,7 @@ class TypeHandlerMap extends TypeHandler {
             <TYPE extends Provider> put(Class<TYPE>, List<TYPE>)
              */
             // this is also good
-            TypeName typeArg = keyType.typeArguments().get(0);
+            TypeName typeArg = keyType.typeArguments().getFirst();
             if (typeArg.wildcard()) {
                 // ?, or ? extends Something
                 if (typeArg.generic()) {
@@ -358,30 +591,33 @@ class TypeHandlerMap extends TypeHandler {
                     .typeArguments(List.of(SAME_GENERIC_TYPE))
                     .build();
         } else {
-            throw new IllegalArgumentException("Property " + name() + " with type " + declaredType().fqName() + " is annotated"
+            throw new IllegalArgumentException("Property " + option().name() + " with type " + option().declaredType()
+                    .fqName() + " is annotated"
                                                        + " with @SameGeneric, yet the key generic type cannot be determined."
                                                        + " Either the key must be a simple type, or a type with one type"
                                                        + " argument.");
         }
 
-        method.addGenericArgument(TypeArgument.builder()
-                                          .token("TYPE")
-                                          .bound(genericTypeBase)
-                                          .description("Type to correctly map key and value")
-                                          .build());
+        method.addTypeParameter(TypeArgument.builder()
+                                        .token("TYPE")
+                                        .bound(genericTypeBase)
+                                        .description("Type to correctly map key and value")
+                                        .build());
 
         // now resolve value
         if (valueType.typeArguments().isEmpty()) {
             if (!genericTypeBase.equals(valueType)) {
-                throw new IllegalArgumentException("Property " + name() + " with type " + declaredType().fqName() + " is "
+                throw new IllegalArgumentException("Property " + option().name() + " with type " + option().declaredType()
+                        .fqName() + " is "
                                                            + "annotated"
                                                            + " with @SameGeneric, yet the type of value is not the"
                                                            + " same as type found on key: " + genericTypeBase.fqName());
             }
             resolvedValueType = SAME_GENERIC_TYPE;
         } else if (valueType.typeArguments().size() == 1) {
-            if (!genericTypeBase.equals(valueType.typeArguments().get(0))) {
-                throw new IllegalArgumentException("Property " + name() + " with type " + declaredType().fqName() + " is "
+            if (!genericTypeBase.equals(valueType.typeArguments().getFirst())) {
+                throw new IllegalArgumentException("Property " + option().name() + " with type " + option().declaredType()
+                        .fqName() + " is "
                                                            + "annotated"
                                                            + " with @SameGeneric, yet type of value is not the"
                                                            + " same as type found on key: " + genericTypeBase.fqName());
@@ -390,141 +626,36 @@ class TypeHandlerMap extends TypeHandler {
                     .typeArguments(List.of(SAME_GENERIC_TYPE))
                     .build();
         } else {
-            throw new IllegalArgumentException("Property " + name() + " with type " + declaredType().fqName() + " is annotated"
+            throw new IllegalArgumentException("Property " + option().name() + " with type " + option().declaredType()
+                    .fqName() + " is annotated"
                                                        + " with @SameGeneric, yet the value generic type cannot be determined."
                                                        + " Either the value must be a simple type, or a type with one type"
                                                        + " argument.");
         }
 
-        method.addParameter(param -> param.name("key")
-                        .type(resolvedKeyType)
+        method.addParameterArgument(param -> param.elementName("key")
+                        .kind(ElementKind.PARAMETER)
+                        .typeName(resolvedKeyType)
                         .description("key to add or replace"))
-                .addParameter(param -> param.name(value)
-                        .type(resolvedValueType)
+                .addParameterArgument(param -> param.elementName(value)
+                        .kind(ElementKind.PARAMETER)
+                        .typeName(resolvedValueType)
                         .description("new value for the key"));
     }
 
-    private void setterAddValueToCollection(InnerClass.Builder classBuilder,
-                                            AnnotationDataOption configured,
-                                            String singularName,
-                                            TypeName keyType,
-                                            TypeName valueType,
-                                            TypeName returnType,
-                                            Javadoc blueprintJavadoc) {
-        String methodName = "add" + capitalize(singularName);
-        TypeName implType = collectionImplType(actualType());
-
-        classBuilder.addMethod(builder -> builder.name(methodName)
-                .accessModifier(setterAccessModifier(configured))
-                .addParameter(param -> param.name("key")
-                        .type(keyType)
-                        .description("key to add to"))
-                .addParameter(param -> param.name(singularName)
-                        .type(valueType)
-                        .description("additional value for the key"))
-                .description(blueprintJavadoc.content())
-                .addDescriptionLine("This method adds a new value to the map value, or creates a new value.")
-                .addJavadocTag("see", "#" + getterName() + "()")
-                .returnType(returnType, "updated builder instance")
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(key);")
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(" + singularName + ");")
-                .addContentLine("this." + name() + ".compute(key, (k, v) -> {")
-                .addContent("v = v == null ? new ")
-                .addContent(implType)
-                .addContent("<>() : new ")
-                .addContent(implType)
-                .addContentLine("<>(v);")
-                .addContentLine("v.add(" + singularName + ");")
-                .addContentLine("return v;")
-                .decreaseContentPadding()
-                .addContentLine("});")
-                .addContentLine("return self();"));
-    }
-
-    private void setterAddValuesToCollection(InnerClass.Builder classBuilder,
-                                             AnnotationDataOption configured,
-                                             String methodName,
-                                             TypeName keyType,
-                                             TypeName returnType,
-                                             Javadoc blueprintJavadoc) {
-        TypeName implType = collectionImplType(actualType());
-        String name = name();
-
-        classBuilder.addMethod(builder -> builder.name(methodName)
-                .accessModifier(setterAccessModifier(configured))
-                .addParameter(param -> param.name("key")
-                        .type(keyType)
-                        .description("key to add to"))
-                .addParameter(param -> param.name(name)
-                        .type(actualType())
-                        .description("additional values for the key"))
-                .description(blueprintJavadoc.content())
-                .addDescriptionLine("This method adds a new value to the map value, or creates a new value.")
-                .addJavadocTag("see", "#" + getterName() + "()")
-                .returnType(returnType, "updated builder instance")
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(key);")
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(" + name + ");")
-                .addContentLine("this." + name + ".compute(key, (k, v) -> {")
-                .addContent("v = v == null ? new ")
-                .addContent(implType)
-                .addContent("<>() : new ")
-                .addContent(implType)
-                .addContentLine("<>(v);")
-                .addContentLine("v.addAll(" + name + ");")
-                .addContentLine("return v;")
-                .decreaseContentPadding()
-                .addContentLine("});")
-                .addContentLine("return self();"));
-    }
-
-    private void declaredSetterAdd(InnerClass.Builder classBuilder, AnnotationDataOption configured,
-                                   TypeName returnType,
-                                   Javadoc blueprintJavadoc) {
-        // declared type - add content
-        classBuilder.addMethod(builder -> builder.name("add" + capitalize(name()))
-                .returnType(returnType, "updated builder instance")
-                .description(blueprintJavadoc.content())
-                .addDescriptionLine("This method keeps existing values, then puts all new values into the map.")
-                .addJavadocTag("see", "#" + getterName() + "()")
-                .addParameter(param -> param.name(name())
-                        .type(argumentTypeName())
-                        .description(blueprintJavadoc.returnDescription()))
-                .accessModifier(setterAccessModifier(configured))
-                .addContent(Objects.class)
-                .addContentLine(".requireNonNull(" + name() + ");")
-                .addContentLine("this." + name() + ".putAll(" + name() + ");")
-                .addContentLine("return self();"));
-    }
-
-    private void secondArgToPut(Method.Builder method, TypeName typeName, String singularName) {
+    private void secondArgToPut(ContentBuilder<?> contentBuilder, TypeName typeName, String singularName) {
         TypeName genericTypeName = typeName.genericTypeName();
         if (genericTypeName.equals(LIST)) {
-            method.addContent(List.class)
+            contentBuilder.addContent(List.class)
                     .addContent(".copyOf(" + singularName + ")");
         } else if (genericTypeName.equals(SET)) {
-            method.addContent(Set.class)
+            contentBuilder.addContent(Set.class)
                     .addContent(".copyOf(" + singularName + ")");
         } else if (genericTypeName.equals(MAP)) {
-            method.addContent(Map.class)
+            contentBuilder.addContent(Map.class)
                     .addContent(".copyOf(" + singularName + ")");
         } else {
-            method.addContent(singularName);
+            contentBuilder.addContent(singularName);
         }
     }
-
-    private boolean isCollection(TypeName typeName) {
-        if (typeName.typeArguments().size() != 1) {
-            return false;
-        }
-        TypeName genericTypeName = typeName.genericTypeName();
-        if (genericTypeName.equals(LIST)) {
-            return true;
-        }
-        return genericTypeName.equals(SET);
-    }
-
 }
